Separate Matthew and Tse into two divs Displays better when resized to a smaller width

--- a/assets/sass/layout/sections.sass
+++ b/assets/sass/layout/sections.sass
@@ -34,10 +34,13 @@
   &-contact
     @extend .subsection
     +pic-bg("../images/contact-bg.jpg")
+
 .intro
   height: 100vh
   background: $grey
   .title
+    div
+      display: inline-block
     h1
       font-size: 4em
     // +pic-bg("../images/bg.png")
