--- a/assets/sass/layout/nav.sass
+++ b/assets/sass/layout/nav.sass
@@ -1,43 +1,3 @@
-.headroom
-  font-size: 1.2em
-  text-align: center
-  height: 65px
-  position: fixed
-  z-index: 9999999
-  right: 0
-  left: 0
-  top: 0
-  background-color: #40474d
-  padding-left: 4%
-  padding-right: 4%
-  transition: all .3s ease-in-out
-  opacity: 0.8
-  backface-visibility: hidden
-
-  &:before, &:after
-    content: " "
-    display: table
-
-  &:after
-    clear: both
-
-  &--pinned
-    transform: translateY(0%)
-
-  &--unpinned
-    transform: translateY(-100%)
-  .container
-    height: 70px
-
-  //the slash
-  slash
-    color: #748185
-    vertical-align: middle
-    font-size: 3.5em
-    font-weight: 200
-    font-family: Times New Roman
-  a
-    font-size: 0.7em
-    color: #FFFFFF
-    text-decoration: none
-    vertical-align: middle
+.nav
+  cursor: pointer
+  cursor: hand
