--- a/assets/sass/components/3Dletters.scss
+++ b/assets/sass/components/3Dletters.scss
@@ -39,6 +39,47 @@
   }
 }
 
+.letter-lifted,.letter-lifted--black{
+  display: inline-block;
+  font-weight: 900;
+  font-size: 4em;
+  margin: 0.03em;
+  position: relative;
+  transform-style: preserve-3d;
+  perspective: 400;
+  z-index: 1;
+  transition: all 0.3s ease-in-out;
+  &:before, &:after{
+    position:absolute;
+    content: attr(data-letter);
+    transform-origin: top left;
+    top:0;
+    left:0;
+    transition: all 0.3s ease-in-out;
+  }
+
+  &:after{
+    color: rgba(0,0,0,.11);
+    z-index:2;
+    transform:
+      scale(1.08,1)
+      rotateX(0deg)
+      rotateY(30deg)
+      rotateZ(0deg)
+      skew(0deg,15deg);
+  }
+  &:after:hover{
+    color: rgba(0,0,0,.11);
+    z-index:2;
+    transform:
+      scale(1.08,1)
+      rotateX(0deg)
+      rotateY(0deg)
+      rotateZ(0deg)
+      skew(0deg,1deg);
+  }
+}
+
 .letter-before{
   text-shadow:
     -1px 0px 1px rgba(255,255,255,.8),
@@ -49,12 +90,12 @@
     rotateY(-18deg)
     rotateZ(0deg);
 }
-.letter:before{
+.letter:before, .letter-lifted:hover:before{
   @extend .letter-before;
   color: #FFF;
 
 }
-.letter--black:before{
+.letter--black:before, .letter-lifted--black:hover:before{
   @extend .letter-before;
   color: $black;
 }
@@ -66,11 +107,14 @@
     rotateY(-30deg)
     rotateZ(0deg);
 }
-.letter:hover:before{
+.letter:hover:before,.letter-lifted:before{
   @extend .letter-hover-before;
   color: #f1f1f1;
+  text-shadow:
+    -1px 0px 1px rgba(255,255,255,.8),
+    1px 0px 1px rgba(0,0,0,.8);
 }
-.letter--black:hover:before{
+.letter--black:hover:before,.letter-lifted--black:before{
   @extend .letter-hover-before;
   color: #373535;
 }
