--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -268,30 +268,36 @@ strong {
   100% {
     opacity: 1; } }
 
-.nav {
+a {
   cursor: pointer;
   cursor: hand; }
-  .nav a {
-    display: inline-block;
-    position: relative; }
-  .nav a:after {
-    content: "";
-    position: absolute;
-    left: 0;
-    display: inline-block;
-    height: 1em;
-    width: 100%;
-    border-bottom: 1px solid;
-    margin-top: 2px;
-    opacity: 0;
-    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-    transition: opacity 0.35s, transform 0.35s;
-    -webkit-transform: scale(0, 1);
-    transform: scale(0, 1); }
-  .nav a:hover:after {
-    opacity: 1;
-    -webkit-transform: scale(1);
-    transform: scale(1); }
+
+.underline-hover a, .underline-hover-thick a {
+  display: inline-block;
+  position: relative; }
+
+.underline-hover a:after, .underline-hover-thick a:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  display: inline-block;
+  height: 1em;
+  width: 100%;
+  border-bottom: 1px solid;
+  margin-top: 2px;
+  opacity: 0;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: scale(0, 1);
+  transform: scale(0, 1); }
+
+.underline-hover a:hover:after, .underline-hover-thick a:hover:after {
+  opacity: 1;
+  -webkit-transform: scale(1);
+  transform: scale(1); }
+
+.underline-hover-thick a:after {
+  border-bottom: 3px solid; }
 
 .section-wrapper {
   min-height: 100vh;
