Offsetting the subsections to 3:2 width ratio Tentative to revert back to 1:1

--- a/assets/scss/layout/sections.scss
+++ b/assets/scss/layout/sections.scss
@@ -50,7 +50,12 @@
     @include pic-bg("../images/contact-bg.jpg");
   }
 }
-
+.flex-3{
+  flex-grow: 3;
+}
+.flex-2{
+  flex-grow: 2;
+}
 .intro {
   height: 100vh;
   background: $grey;
