--- a/assets/scss/layout/work.scss
+++ b/assets/scss/layout/work.scss
@@ -1,6 +1,5 @@
 #watchr {
   background: url("../images/blurred/watchr.jpg");
-  background-position: 50% 50%;
 }
 
 #findit {
@@ -20,11 +19,16 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-size: cover;
-
+  background-size: 110%;
+  transition: all .3s ease-in-out;
+  background-position: 50% 50%;
+  &:hover{
+    background-size: 100%
+  }
   div {
     color: $white;
     font-weight: 900;
     font-size: 3.5em;
+
   }
 }
