--- a/assets/scss/components/about.scss
+++ b/assets/scss/components/about.scss
@@ -1,13 +1,17 @@
 .about {
   // font-family: montserrat-light
-  padding: 50px 70px;
+  // padding: 50px 70px;
+  padding: 50px 60px;
   flex: 1;
-  overflow-y: scroll;
+  overflow: hidden;
   min-height: 0px;
-
-  .text {
-    flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+    text-align: left;
     line-height: 1.4;
+  .text {
+    // flex: 1;
     text-align: left;
   }
 
