--- a/assets/scss/layout/sections.scss
+++ b/assets/scss/layout/sections.scss
@@ -75,7 +75,7 @@
 }
 
 .zoom:hover{
-    flex-grow: 3 !important;
+    flex-grow: 2 !important;
 }
 @media all and (max-width: 600px) {
   .subsection-title {
@@ -133,7 +133,7 @@
     }
   }
   #contact {
-    min-height: 20vh !important;
-    max-height: 25vh !important;
+    opacity: 0;
+    display: none;
   }
 }
