--- a/assets/scss/layout/work.scss
+++ b/assets/scss/layout/work.scss
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-size: 100%;
+  background-size: cover;
   transition: all .3s ease-in-out;
   background-position: 50% 50%;
   cursor: pointer;
