Fix typo that caused path error

--- a/assets/scss/layout/work.scss
+++ b/assets/scss/layout/work.scss
@@ -3,7 +3,7 @@
 }
 
 #findit {
-  background: url("../images/blurred/Findit.jpg");
+  background: url("../images/blurred/FindIt.jpg");
 }
 
 #clarifind {
