--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -145,7 +145,7 @@ strong {
       background: #007bb5; }
 
 .subtitle {
-  margin-bottom: 18px;
+  margin: 20px auto 20px auto;
   font-weight: 700;
   text-align: left;
   font-size: 1.2em; }
@@ -222,13 +222,16 @@ strong {
   color: #373535; }
 
 .about {
-  padding: 50px 70px;
+  padding: 50px 60px;
   flex: 1;
-  overflow-y: scroll;
-  min-height: 0px; }
+  overflow: hidden;
+  min-height: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: left;
+  line-height: 1.4; }
   .about .text {
-    flex: 1;
-    line-height: 1.4;
     text-align: left; }
   .about a:link {
     color: #444444; }
@@ -244,10 +247,11 @@ strong {
 .arrow {
   width: 30px;
   height: 30px;
-  top: 95%;
+  bottom: 45px;
   position: absolute;
-  left: 50%;
-  margin: -20px 0 0 -20px;
+  left: 0%;
+  right: 0%;
+  margin: -20px auto;
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
@@ -373,7 +377,7 @@ a {
     display: none; }
 
 .zoom:hover {
-  flex-grow: 3 !important; }
+  flex-grow: 2 !important; }
 
 @media all and (max-width: 600px) {
   .subsection-title {
@@ -410,14 +414,14 @@ a {
         color: #444444;
         text-decoration: none; }
   #contact {
-    min-height: 20vh !important;
-    max-height: 25vh !important; } }
+    opacity: 0;
+    display: none; } }
 
 #watchr {
   background: url("../images/blurred/watchr.jpg"); }
 
 #findit {
-  background: url("../images/blurred/Findit.jpg"); }
+  background: url("../images/blurred/FindIt.jpg"); }
 
 #clarifind {
   background: url("../images/blurred/clarifind.jpg"); }
@@ -430,7 +434,7 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-size: 100%;
+  background-size: cover;
   transition: all .3s ease-in-out;
   background-position: 50% 50%;
   cursor: pointer;
