--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -305,11 +305,11 @@ strong {
 a {
   cursor: hand; }
 
-.underline-hover a, .underline-hover-thick a, #watchr .plink a, #uwatm8 .plink a, #clarifind .plink a, #findit .plink a {
+.underline-hover a, .underline-hover-thick a, #watchr .plink a, #scout .plink a, #uwparkingbot .plink a, #findit .plink a {
   display: inline-block;
   position: relative; }
 
-.underline-hover a:after, .underline-hover-thick a:after, #watchr .plink a:after, #uwatm8 .plink a:after, #clarifind .plink a:after, #findit .plink a:after {
+.underline-hover a:after, .underline-hover-thick a:after, #watchr .plink a:after, #scout .plink a:after, #uwparkingbot .plink a:after, #findit .plink a:after {
   content: "";
   position: absolute;
   left: 0;
@@ -324,7 +324,7 @@ a {
   -webkit-transform: scale(0, 1);
   transform: scale(0, 1); }
 
-.underline-hover a:hover:after, .underline-hover-thick a:hover:after, #watchr .plink a:hover:after, #uwatm8 .plink a:hover:after, #clarifind .plink a:hover:after, #findit .plink a:hover:after {
+.underline-hover a:hover:after, .underline-hover-thick a:hover:after, #watchr .plink a:hover:after, #scout .plink a:hover:after, #uwparkingbot .plink a:hover:after, #findit .plink a:hover:after {
   opacity: 1;
   -webkit-transform: scale(1);
   transform: scale(1); }
@@ -422,13 +422,13 @@ a {
 #findit {
   background: url("../images/blurred/FindIt.jpg"); }
 
-#clarifind {
-  background: url("../images/blurred/clarifind.jpg"); }
+#uwparkingbot {
+  background: url("../images/blurred/uwparkingbot.jpg"); }
 
-#uwatm8 {
-  background: url("../images//blurred/uwatm8.jpg"); }
+#scout {
+  background: url("../images/blurred/scout.jpg"); }
 
-#watchr, #uwatm8, #clarifind, #findit {
+#watchr, #scout, #uwparkingbot, #findit {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
@@ -436,21 +436,24 @@ a {
   background-size: cover;
   transition: all .3s ease-in-out;
   background-position: 50% 50%; }
-  #watchr:hover, #uwatm8:hover, #clarifind:hover, #findit:hover {
+  #watchr:hover, #scout:hover, #uwparkingbot:hover, #findit:hover {
     background-size: 110%; }
-    #watchr:hover .plink, #uwatm8:hover .plink, #clarifind:hover .plink, #findit:hover .plink {
+    #watchr:hover .plink, #scout:hover .plink, #uwparkingbot:hover .plink, #findit:hover .plink {
       opacity: 100; }
-  #watchr .work-title, #uwatm8 .work-title, #clarifind .work-title, #findit .work-title {
+  #watchr .work-title, #scout .work-title, #uwparkingbot .work-title, #findit .work-title {
     color: #ffffff;
     font-weight: 900;
     font-size: 3.5em; }
-  #watchr .plink, #uwatm8 .plink, #clarifind .plink, #findit .plink {
+  #watchr .plink, #scout .plink, #uwparkingbot .plink, #findit .plink {
     display: inline-block;
     opacity: 0;
     transition: all .3s ease-in-out; }
-    #watchr .plink a, #uwatm8 .plink a, #clarifind .plink a, #findit .plink a {
+    #watchr .plink a, #scout .plink a, #uwparkingbot .plink a, #findit .plink a {
       display: inline-block;
       color: #ffffff;
       text-decoration: none; }
-    #watchr .plink a:after, #uwatm8 .plink a:after, #clarifind .plink a:after, #findit .plink a:after {
+    #watchr .plink a:after, #scout .plink a:after, #uwparkingbot .plink a:after, #findit .plink a:after {
       border-bottom: 2px solid; }
+  #watchr .tag-line, #scout .tag-line, #uwparkingbot .tag-line, #findit .tag-line {
+    color: #ffffff;
+    margin-bottom: 5px; }
