Add Hero image and update text color

--- a/assets/scss/components/mainlogo.scss
+++ b/assets/scss/components/mainlogo.scss
@@ -4,7 +4,7 @@
 
 .logopath {
   fill: none;
-  stroke: black;
+  stroke: $white;
   stroke-width: 50;
   stroke-linecap: round;
   stroke-linejoin: round;
