--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -277,7 +277,7 @@ strong {
 
 .logopath {
   fill: none;
-  stroke: black;
+  stroke: #ffffff;
   stroke-width: 50;
   stroke-linecap: round;
   stroke-linejoin: round;
@@ -301,6 +301,13 @@ strong {
     stroke-width: 80; }
   100% {
     stroke-width: 50; } }
+
+.typer {
+  color: #ffffff; }
+
+@media all and (max-width: 600px) {
+  .typer {
+    margin-top: 20px; } }
 
 a {
   cursor: hand; }
@@ -337,7 +344,7 @@ a {
   display: flex;
   flex-direction: row; }
 
-.subsection, .subsection-white, .subsection-about, .subsection-orange, .subsection-grey, .subsection-contact {
+.subsection, .subsection-white, .subsection-about, .subsection-orange, .subsection-grey, .subsection-hero, .subsection-contact {
   min-height: 20vh;
   flex: 1;
   display: flex;
@@ -352,6 +359,13 @@ a {
     background-color: #9068be; }
   .subsection-grey {
     background-color: #e1e8f0; }
+  .subsection-hero {
+    background-color: #e1e8f0;
+    background: url("../images/herobg.jpg") no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover; }
   .subsection-contact {
     background: url("../images/contact-bg.jpg") no-repeat center center;
     -webkit-background-size: cover;
@@ -367,7 +381,12 @@ a {
 
 .intro {
   height: 100vh;
-  background: #e1e8f0; }
+  background: #e1e8f0;
+  background: url("../images/herobg.jpg") no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
   .intro .title div {
     display: inline-block; }
   .intro .title h1 {
@@ -388,8 +407,6 @@ a {
     background-color: #e1e8f0; }
   .subsection-contact {
     display: none; }
-  .typer {
-    margin-top: 20px; }
   .intro .icons-list {
     display: inline-block;
     font-size: 1.5em;
