Add bg for About subsection

--- a/assets/scss/layout/sections.scss
+++ b/assets/scss/layout/sections.scss
@@ -30,6 +30,8 @@
     @extend .subsection;
 
     background-color: $primary-color;
+    @include pic-bg("../images/aboutbg.jpg");
+    background-position: 80% 60%;
   }
 
   &-orange {
