--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -76,6 +76,92 @@ strong {
 .white {
   color: #ffffff; }
 
+/*!
+ *
+ * bttn.css - https://ganapativs.github.io/bttn.css
+ * Version - 0.2.4
+ * Demo: https://bttn.surge.sh
+ *
+ * Licensed under the MIT license - http://opensource.org/licenses/MIT
+ *
+ * Copyright (c) 2016 Ganapati V S (@ganapativs)
+ *
+ */
+/* standalone - .bttn-unite */
+.bttn-primary,
+.bttn-sm {
+  color: #1d89ff; }
+
+.bttn-sm {
+  margin: 0;
+  padding: 0;
+  border-width: 0;
+  border-color: transparent;
+  background: transparent;
+  font-weight: 400;
+  cursor: pointer;
+  position: relative; }
+
+.bttn-sm {
+  padding: 1px 5px 3px 5px;
+  font-size: 14px;
+  font-family: inherit; }
+
+.bttn-unite {
+  margin: 0px 3px;
+  padding: 0;
+  border-width: 0;
+  border-color: transparent;
+  background: transparent;
+  font-weight: 400;
+  cursor: pointer;
+  position: relative;
+  font-size: 20px;
+  font-family: inherit;
+  padding: 5px 12px;
+  z-index: 0;
+  overflow: hidden;
+  border: 2px solid;
+  border-radius: 100px;
+  background: transparent;
+  color: #fff;
+  -webkit-transition: color 0.3s cubic-bezier(0.02, 0.01, 0.47, 1), border-color 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+  transition: color 0.3s cubic-bezier(0.02, 0.01, 0.47, 1), border-color 0.3s cubic-bezier(0.02, 0.01, 0.47, 1); }
+
+.bttn-unite:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 120%;
+  content: '';
+  opacity: 0;
+  z-index: -1;
+  -webkit-transition: opacity 0.3s cubic-bezier(0.02, 0.01, 0.47, 1), -webkit-transform 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+  transition: opacity 0.3s cubic-bezier(0.02, 0.01, 0.47, 1), -webkit-transform 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+  transition: transform 0.3s cubic-bezier(0.02, 0.01, 0.47, 1), opacity 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+  transition: transform 0.3s cubic-bezier(0.02, 0.01, 0.47, 1), opacity 0.3s cubic-bezier(0.02, 0.01, 0.47, 1), -webkit-transform 0.3s cubic-bezier(0.02, 0.01, 0.47, 1); }
+
+.bttn-unite:hover:after,
+.bttn-unite:focus:after {
+  opacity: 0.3;
+  -webkit-transition: opacity 0.3s cubic-bezier(0.02, 0.01, 0.47, 1), -webkit-transform 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+  transition: opacity 0.3s cubic-bezier(0.02, 0.01, 0.47, 1), -webkit-transform 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+  transition: transform 0.3s cubic-bezier(0.02, 0.01, 0.47, 1), opacity 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+  transition: transform 0.3s cubic-bezier(0.02, 0.01, 0.47, 1), opacity 0.3s cubic-bezier(0.02, 0.01, 0.47, 1), -webkit-transform 0.3s cubic-bezier(0.02, 0.01, 0.47, 1); }
+
+.bttn-unite.bttn-sm {
+  padding: 3px 10px;
+  font-size: 12px;
+  font-family: inherit; }
+
+.bttn-unite.bttn-primary {
+  border-color: #FFFFFF;
+  color: #FFFFFF; }
+
+.bttn-unite.bttn-primary:after {
+  background: #FFFFFF; }
+
 .contact {
   padding: 50px 60px; }
   .contact .text {
@@ -312,11 +398,11 @@ strong {
 a {
   cursor: hand; }
 
-.underline-hover a, .underline-hover-thick a, #watchr .plink a, #scout .plink a, #uwparkingbot .plink a, #findit .plink a {
+.underline-hover a, .underline-hover-thick a {
   display: inline-block;
   position: relative; }
 
-.underline-hover a:after, .underline-hover-thick a:after, #watchr .plink a:after, #scout .plink a:after, #uwparkingbot .plink a:after, #findit .plink a:after {
+.underline-hover a:after, .underline-hover-thick a:after {
   content: "";
   position: absolute;
   left: 0;
@@ -331,7 +417,7 @@ a {
   -webkit-transform: scale(0, 1);
   transform: scale(0, 1); }
 
-.underline-hover a:hover:after, .underline-hover-thick a:hover:after, #watchr .plink a:hover:after, #scout .plink a:hover:after, #uwparkingbot .plink a:hover:after, #findit .plink a:hover:after {
+.underline-hover a:hover:after, .underline-hover-thick a:hover:after {
   opacity: 1;
   -webkit-transform: scale(1);
   transform: scale(1); }
@@ -476,13 +562,13 @@ a {
     font-size: 3.5em; }
   #watchr .plink, #scout .plink, #uwparkingbot .plink, #findit .plink {
     display: inline-block;
-    opacity: 0; }
+    opacity: 0;
+    -webkit-transition: opacity 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+    transition: opacity 0.3s cubic-bezier(0.02, 0.01, 0.47, 1); }
     #watchr .plink a, #scout .plink a, #uwparkingbot .plink a, #findit .plink a {
       display: inline-block;
       color: #ffffff;
       text-decoration: none; }
-    #watchr .plink a:after, #scout .plink a:after, #uwparkingbot .plink a:after, #findit .plink a:after {
-      border-bottom: 2px solid; }
   #watchr .tag-line, #scout .tag-line, #uwparkingbot .tag-line, #findit .tag-line {
     color: #ffffff;
     margin-bottom: 5px; }
@@ -500,14 +586,10 @@ a {
       font-size: 3em; }
     #watchr .plink, #scout .plink, #uwparkingbot .plink, #findit .plink {
       display: inline-block;
-      opacity: 100;
-      transition: all .3s ease-in-out; }
+      opacity: 100; }
       #watchr .plink a, #scout .plink a, #uwparkingbot .plink a, #findit .plink a {
         display: inline-block;
-        color: #ffffff;
-        text-decoration: underline; }
-      #watchr .plink a:after, #scout .plink a:after, #uwparkingbot .plink a:after, #findit .plink a:after {
-        border-bottom: 2px solid; }
+        color: #ffffff; }
     #watchr .tag-line, #scout .tag-line, #uwparkingbot .tag-line, #findit .tag-line {
       color: #ffffff;
       margin-bottom: 5px; } }
