Update nav arrow color to white

--- a/assets/scss/components/arrow.scss
+++ b/assets/scss/components/arrow.scss
@@ -12,8 +12,8 @@
   -o-transform: rotate(45deg);
   border-left: none;
   border-top: none;
-  border-right: 2px #000 solid;
-  border-bottom: 2px #000 solid;
+  border-right: 2px #FFF solid;
+  border-bottom: 2px #FFF solid;
   animation-duration: 4s;
   animation-iteration-count: infinite;
   animation-name: arrow;
