--- a/assets/scss/layout/work.scss
+++ b/assets/scss/layout/work.scss
@@ -6,6 +6,10 @@
   background: url("../images/blurred/FindIt.jpg");
 }
 
+#gestur {
+  background: url("../images/blurred/gestur.jpg");
+}
+
 #uwparkingbot {
   background: url("../images/blurred/uwparkingbot.jpg");
 }
@@ -14,7 +18,7 @@
   background: url("../images/blurred/scout.jpg");
 }
 
-#watchr, #scout, #uwparkingbot, #findit {
+#watchr, #scout, #uwparkingbot, #findit, #gestur {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
@@ -64,7 +68,7 @@
 }
 
 @media all and (max-width: 600px){
-  #watchr, #scout, #uwparkingbot, #findit {
+  #watchr, #scout, #uwparkingbot, #findit, #gestur {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
